# Sklm

./: .gitignore  AGENTS.md  LICENSE  README.md  opencode.jsonc  pyproject.toml  requirements.txt
.github/workflows/: bump-version.yml  publish.yml
docs/: index.html
fabrik/: __init__.py  api.py  telemetry.py
fabrik/agents/: __init__.py  base.py  generic.py  github_copilot.py  opencode.py  registry.py
fabrik/cli/: __init__.py  main.py
fabrik/core/: crud.py  linking.py  registry.py  workspace.py
fabrik/models/: __init__.py
fabrik/store/: __init__.py
sklm/: __init__.py  api.py  telemetry.py  tui.py
sklm/agents/: __init__.py  _sync.py  agents.yaml  base.py  generic.py  github_copilot.py  opencode.py  registry.py
sklm/cli/: __init__.py  main.py  prompts.py  wizard.py
sklm/core/: crud.py  linking.py  registry.py  update.py  workspace.py
sklm/models/: __init__.py
sklm/store/: __init__.py
tests/: test_fabrik.py  test_sklm.py  test_tui_api.py
