[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sklm"
version = "0.1.5"
description = "Skills manager for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["skills", "ai-agent", "cli"]

authors = [
    {name = "Auran0s"},
]

dependencies = [
    "typer>=0.12.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "umami-analytics>=0.2.0",
]

[project.scripts]
sklm = "sklm.cli.main:run"

[tool.setuptools.packages.find]
include = ["sklm*"]
